Added build and test information